--- a/zipflix/src/main/resources/public/Home.html
+++ b/zipflix/src/main/resources/public/Home.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="text">
         <h1>Welcome to ZIPFLIX</h1>
-        <p>Zipflix is your ultimate destination for an immersive and enjoyable movie-watching experience. Start exploring our collection today!</p>
+        <p>Zipflix is your ultimate destination for a captivating and enjoyable movie-watching experience. Start exploring our collection today!</p>
         <button class="cta-button"><a href="videolist.html">Start Watching</a></button>
       </div>
       <img src="Images/home.jpg" alt="Background Image" class="background-image">
